Enable sponsor selection
r4899
2019-02-12

## CHANGES
1. Enable the selection of sponsor in classic MarsProject mode.
   - Add the sponsor combo box in SimulationConfigEditor's
     constructor.
2. Modify getCountry() and createInitialPeople() in UnitManager
   to recognize the long format sponsor name in
3. Initialize the array list in getLongSponsorList() and
   getSponsorList() in ReportingAuthorityType.
4. Experiment with WaitLayerUI for creating a wait indicator.
   - Add a few class for experiments.